--- a/projects.html
+++ b/projects.html
@@ -27,24 +27,41 @@
     />
 
     <style>
-      @font-face {
-        font-family: Helvetica;
-        src: url(/fonts/Helvetica.ttf);
-      }
-      @font-face {
-        font-family: "Helvetica-Bold";
-        src: url(/fonts/Helvetica-Bold.ttf);
+      /* @font-face {
+        font-family: "tanmon";
+        src: url(/fonts/tan-mon-cheri.woff);
+      } */
+      /* @font-face {
+        font-family: "tanmon";
+        src: url(/fonts/tan-mon-cheri.ttf);
       }
       @font-face {
         font-family: "Helvetica-Light";
         src: url(/fonts/helvetica-light.ttf);
       }
+      @font-face {
+        font-family: "Griffiths";
+        src: url(/fonts/Griffiths.otf);
+      } */
+
+      /* @import url("https://fonts.googleapis.com/css2?family=Alata&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+      
+      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"); */
+
+      @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
       body {
         padding: 0;
         margin: 0;
-        /* font-family: Helvetica; */
+        /* font-family: Helvetica;
         font-family: "Poppins", sans-serif;
-        font-size: 14px;
+        font-family: "Cardo", serif;
+        font-family: "Raleway", sans-serif; */
+        font-family: "Montserrat", sans-serif;
+
+        font-size: 16px;
+        line-height: 1.4;
       }
       h1,
       h2,
@@ -52,10 +69,15 @@
       h4,
       h5,
       h6 {
-        font-family: "Karla", sans-serif;
+        /* font-family: "Karla", sans-serif;
+        font-family: "Bodoni Moda", serif; */
+        font-family: "Libre Baskerville", serif;
+
         font-optical-sizing: auto;
-        font-weight: 700;
+        font-weight: 600;
         font-style: normal;
+        line-height: normal;
+        letter-spacing: 0.5px;
       }
       .mainWrapper {
         padding-bottom: 50px;
@@ -1000,7 +1022,7 @@
                           </div>
                         </li>
 
-                        <li class="ss-carousel__item videoBlock">
+                        <!-- <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
                               src="/projects/aakruti/Akruti2.mp4"
@@ -1010,6 +1032,14 @@
 
                             Your browser does not support the video tag.
                           </video>
+                        </li> -->
+
+                        <li class="ss-carousel__item imgBlock">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/projects/aakruti/aakruti-sitemap.jpg"
+                            alt=""
+                          />
                         </li>
                         <li class="ss-carousel__item imgBlock horizantal">
                           <img
@@ -1106,7 +1136,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/aakruti/Akruti1.mp4"
+                              src="/projects/aakruti/Aakruthi-Full Video 5.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1397,7 +1427,7 @@
                         <li class="ss-carousel__item imgBlock">
                           <img
                             class="ss-carousel__item__image"
-                            src="/projects/anubhava/plan.jpg"
+                            src="/projects/anubhava/plan-new.jpg"
                             alt=""
                           />
                         </li>
@@ -1428,7 +1458,7 @@
                         <li class="ss-carousel__item videoBlock">
                           <video muted autoplay loop>
                             <source
-                              src="/projects/anubhava/Anubhava Sweets.mp4"
+                              src="/projects/anubhava/Anubhava Sweets Colour.mp4"
                               type="video/mp4"
                               poster="/images/blank.png"
                             />
@@ -1440,7 +1470,7 @@
                         <li class="ss-carousel__item imgBlock">
                           <img
                             class="ss-carousel__item__image"
-                            src="/projects/anubhava/4.jpg"
+                            src="/projects/anubhava/4new.jpg"
                             alt=""
                           />
                         </li>
@@ -1857,7 +1887,7 @@
                                 <p class="location">
                                   JUBILEE HILLS, PUNJAGUTTA
                                 </p>
-                                <p class="location">2023</p>
+                                <p class="location">2024</p>
                               </div>
                             </div>
                             <div class="moreInfo">
@@ -3062,6 +3092,17 @@
                             </p>
                           </div>
                         </li>
+                        <li class="ss-carousel__item videoBlock verticalVideo">
+                          <video muted autoplay loop>
+                            <source
+                              src="/projects/goyaz/Goyaz Elevation.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
 
                         <li class="ss-carousel__item imgBlock">
                           <img
@@ -3708,7 +3749,7 @@
         background-position: center;
         background-repeat: no-repeat;
         text-align: center;
-        background-color: #f7f7f7;
+        /* background-color: #f7f7f7; */
       }
 
       .ss-carousel .ss-carousel__item.videoBlock.verticalVideo video {
