--- a/news-events.html
+++ b/news-events.html
@@ -19,13 +19,13 @@
       rel="stylesheet"
     />
     <style>
-      @font-face {
-        font-family: Helvetica;
-        src: url(/fonts/Helvetica.ttf);
-      }
-      @font-face {
-        font-family: "Helvetica-Bold";
-        src: url(/fonts/Helvetica-Bold.ttf);
+      /* @font-face {
+        font-family: "tanmon";
+        src: url(/fonts/tan-mon-cheri.woff);
+      } */
+      /* @font-face {
+        font-family: "tanmon";
+        src: url(/fonts/tan-mon-cheri.ttf);
       }
       @font-face {
         font-family: "Helvetica-Light";
@@ -34,13 +34,26 @@
       @font-face {
         font-family: "Griffiths";
         src: url(/fonts/Griffiths.otf);
-      }
+      } */
+
+      /* @import url("https://fonts.googleapis.com/css2?family=Alata&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+      
+      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"); */
+
+      @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
       body {
         padding: 0;
         margin: 0;
-        font-family: Helvetica;
+        /* font-family: Helvetica;
         font-family: "Poppins", sans-serif;
-        font-size: 14px;
+        font-family: "Cardo", serif;
+        font-family: "Raleway", sans-serif; */
+        font-family: "Montserrat", sans-serif;
+
+        font-size: 16px;
+        line-height: 1.4;
       }
       h1,
       h2,
@@ -48,10 +61,15 @@
       h4,
       h5,
       h6 {
-        font-family: "Karla", sans-serif;
+        /* font-family: "Karla", sans-serif;
+        font-family: "Bodoni Moda", serif; */
+        font-family: "Libre Baskerville", serif;
+
         font-optical-sizing: auto;
-        font-weight: 700;
+        font-weight: 600;
         font-style: normal;
+        line-height: normal;
+        letter-spacing: 0.5px;
       }
       .logo {
         width: 50px;
