--- a/projects.html
+++ b/projects.html
@@ -376,7 +376,7 @@
         border-radius: 8px; */
       }
 
-      @media all and (max-width: 576px) {
+      @media all and (max-width: 768px) {
         #menu {
           width: 100vw;
           height: 100vh;
@@ -389,6 +389,21 @@
         }
         .css-mobile-menu #menuToggle {
           padding-right: 1rem;
+        }
+        .footer {
+          padding: 50px 0 100px 0;
+          font-size: 12px;
+          display: flex;
+          justify-content: flex-start;
+          gap: 0;
+          margin-bottom: 100px;
+          flex-wrap: wrap;
+        }
+        .footer-section {
+          margin: 10px 0;
+          position: relative;
+          min-width: 20%;
+          width: 25%;
         }
       }
     </style>
@@ -3946,6 +3961,7 @@
         .projectItem {
           width: 90%;
           min-height: auto;
+          margin-left: auto;
         }
         .firstSection {
           display: flex;
