--- a/about-us.html
+++ b/about-us.html
@@ -882,19 +882,19 @@
                 </div>
                 <div class="sub-content" id="emailSection">
                   <p>
-                    New Projects:
+                    <span class="emailLabel">New Projects:</span>
                     <a href="mailto:pranay@eyecatcharchitects.com"
                       >pranay@eyecatcharchitects.com</a
                     >
                   </p>
                   <p>
-                    Contact:
+                    <span class="emailLabel">Contact:</span>
                     <a href="mailto:contact@eyecatcharchitects.com"
                       >contact@eyecatcharchitects.com</a
                     >
                   </p>
                   <p>
-                    Careers:
+                    <span class="emailLabel">Careers:</span>
                     <a href="mailto:hr@eyecatcharchitects.com"
                       >hr@eyecatcharchitects.com</a
                     >
