--- a/architecture.html
+++ b/architecture.html
@@ -956,6 +956,10 @@
         margin: 0;
         padding: 0;
       }
+      .emailLabel {
+        min-width: 85px;
+        display: inline-block;
+      }
       .sub-content p a {
         color: #000;
       }
