--- a/careers.html
+++ b/careers.html
@@ -563,19 +563,19 @@
               </div>
               <div class="sub-content" id="emailSection">
                 <p>
-                  New Projects:
+                  <span class="emailLabel">New Projects:</span>
                   <a href="mailto:pranay@eyecatcharchitects.com"
                     >pranay@eyecatcharchitects.com</a
                   >
                 </p>
                 <p>
-                  Contact:
+                  <span class="emailLabel">Contact:</span>
                   <a href="mailto:contact@eyecatcharchitects.com"
                     >contact@eyecatcharchitects.com</a
                   >
                 </p>
                 <p>
-                  Careers:
+                  <span class="emailLabel">Careers:</span>
                   <a href="mailto:hr@eyecatcharchitects.com"
                     >hr@eyecatcharchitects.com</a
                   >
@@ -790,6 +790,10 @@
       .sub-content p {
         margin: 0;
         padding: 0;
+      }
+      .emailLabel {
+        min-width: 85px;
+        display: inline-block;
       }
       .sub-content p a {
         color: #000;
