--- a/projects.html
+++ b/projects.html
@@ -879,9 +879,7 @@
                             <div>
                               <h5>Project Leader</h5>
                               <p>Madhu sudhan rao Pulipati</p>
-                              <h5 class="subHead2">
-                                Project Architect, Concept
-                              </h5>
+                              <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
@@ -1243,9 +1241,7 @@
                             <div>
                               <h5>Project Leader</h5>
                               <p>Madhu sudhan rao Pulipati</p>
-                              <h5 class="subHead2">
-                                Project Architect, Concept
-                              </h5>
+                              <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
@@ -1529,9 +1525,7 @@
                             <div>
                               <h5>Project Leader</h5>
                               <p>Madhu sudhan rao Pulipati</p>
-                              <h5 class="subHead2">
-                                Project Architect, Concept
-                              </h5>
+                              <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
@@ -1813,9 +1807,7 @@
                             <div>
                               <h5>Project Leader</h5>
                               <p>Madhu sudhan rao Pulipati</p>
-                              <h5 class="subHead2">
-                                Project Architect, Concept
-                              </h5>
+                              <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
@@ -2229,9 +2221,7 @@
                             <div>
                               <h5>Project Leader</h5>
                               <p>Madhu sudhan rao Pulipati</p>
-                              <h5 class="subHead2">
-                                Project Architect, Concept
-                              </h5>
+                              <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
@@ -2544,9 +2534,7 @@
                             <div>
                               <h5>Project Leader</h5>
                               <p>Madhu sudhan rao Pulipati</p>
-                              <h5 class="subHead2">
-                                Project Architect, Concept
-                              </h5>
+                              <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
@@ -2950,9 +2938,7 @@
                             <div>
                               <h5>Project Leader</h5>
                               <p>Madhu sudhan rao Pulipati</p>
-                              <h5 class="subHead2">
-                                Project Architect, Concept
-                              </h5>
+                              <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
@@ -3256,9 +3242,7 @@
                             <div>
                               <h5>Project Leader</h5>
                               <p>Madhu sudhan rao Pulipati</p>
-                              <h5 class="subHead2">
-                                Project Architect, Concept
-                              </h5>
+                              <h5 class="subHead2">Project Architect</h5>
                               <p>Ar. Pranay Mithilesh Pulipati</p>
                               <p>Id. Medha Pulipati</p>
                               <h5 class="subHead2">Project Manager</h5>
@@ -3311,19 +3295,19 @@
                   </div>
                   <div class="sub-content" id="emailSection">
                     <p>
-                      New Projects:
+                      <span class="emailLabel">New Projects:</span>
                       <a href="mailto:pranay@eyecatcharchitects.com"
                         >pranay@eyecatcharchitects.com</a
                       >
                     </p>
                     <p>
-                      Contact:
+                      <span class="emailLabel">Contact:</span>
                       <a href="mailto:contact@eyecatcharchitects.com"
                         >contact@eyecatcharchitects.com</a
                       >
                     </p>
                     <p>
-                      Careers:
+                      <span class="emailLabel">Careers:</span>
                       <a href="mailto:hr@eyecatcharchitects.com"
                         >hr@eyecatcharchitects.com</a
                       >
@@ -3543,6 +3527,11 @@
       .sub-content p {
         margin: 0;
         padding: 0;
+      }
+
+      .emailLabel {
+        min-width: 85px;
+        display: inline-block;
       }
       .sub-content p a {
         color: #000;
@@ -3828,9 +3817,9 @@
         min-height: 500px;
       }
       .ss-carousel .ss-carousel__item.teamBlock h5 {
-        font-size: 14px;
+        font-size: 10px;
 
-        margin: 0 0 10px 0;
+        margin: 0 0 5px 0;
         text-transform: uppercase;
         color: #787878;
       }
