--- a/news-events.html
+++ b/news-events.html
@@ -307,6 +307,10 @@
       .detailedAddress strong {
         font-weight: 600;
       }
+      .emailLabel {
+        min-width: 85px;
+        display: inline-block;
+      }
       .sub-content p a {
         color: #000;
       }
@@ -798,19 +802,19 @@
                   </div>
                   <div class="sub-content" id="emailSection">
                     <p>
-                      New Projects:
+                      <span class="emailLabel">New Projects:</span>
                       <a href="mailto:pranay@eyecatcharchitects.com"
                         >pranay@eyecatcharchitects.com</a
                       >
                     </p>
                     <p>
-                      Contact:
+                      <span class="emailLabel">Contact:</span>
                       <a href="mailto:contact@eyecatcharchitects.com"
                         >contact@eyecatcharchitects.com</a
                       >
                     </p>
                     <p>
-                      Careers:
+                      <span class="emailLabel">Careers:</span>
                       <a href="mailto:hr@eyecatcharchitects.com"
                         >hr@eyecatcharchitects.com</a
                       >
